working lsp